--- a/product.html
+++ b/product.html
@@ -5,6 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<>, initial-scale=1.0">
     <title>Document</title>
+    <style> 
+        ul {
+          list-style-type: none;
+          display:grid;
+          grid-template-columns: auto auto auto;
+          padding: 12px;
+        }
+
+        li {
+           text-align: center;
+        }
+     </style>
 </head>
 <body>
     <h3>welcome to product page</h3>
@@ -15,7 +27,7 @@
             <img src="./images/shoes101.jpg" alt="ABC Shoe" width="200px" heigth="200px">
             <br>
             <p>This is a description of the product</p>
-            <a href="#">Add to Cart</a>
+            <a href="productDetail.html">Add to Cart</a>
         </li>
         <li>
             <b>XYZ Shoe</b>
