--- a/sale.html
+++ b/sale.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <h3>List of Products for Sale</h3>
-<table style="width:100;">
+<table style="width:50%;">
       <tr>
          <th>Code</th>
          <th>Name</th> 
