--- a/profile.html
+++ b/profile.html
@@ -8,5 +8,16 @@
 </head>
 <body>
     <h3>welcome to profile page</h3>
+    <h2>John Watson</h2>
+    <img src="images/profile.png" alt="John" width="200px" height="100px">
+    <p>john.watson@example.com</p>
+   <br>
+   <b><a href="">Manage Addresses</a></b>
+   <br>
+   <b><a href="">Manage Orders</a></b>
+   <br>
+   <b><a href="">Manage Membership</a></b>
+   <br><br>
+   <button>Update Profile</button>
 </body>
 </html>
