--- a/sale.html
+++ b/sale.html
@@ -15,8 +15,9 @@
 </head>
 <body>
     <h3>List of Products for Sale</h3>
-<table style="width:50%;">
-      <tr>
+   
+<table style="width:100%;background-image: url(images/shoes101.jpg);">
+      <tr style="background-color: cadetblue;">
          <th>Code</th>
          <th>Name</th> 
          <th>Price</th> 
@@ -30,7 +31,7 @@
         <td>60% Off</td>
         <td><a href="">Add to Cart</a></td>
      </tr>
-     <tr>
+     <tr style="height:500px">
         <td>102</td> 
         <td>Samsung OLED TV</td> 
         <td>50000</td> 
