added stles and modified news

--- a/news.html
+++ b/news.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
+   
+     <link rel="stylesheet" href="./styles/web.css" type="text/css">
 </head>
 <body>
-    <h1>Welcome to news section</h1>
-    
+    <h1 style="color: chocolate; font-size: x-large; margin: 16px;">Welcome to news section</h1>
+    <h1> welcome to news section for india</h1>
 </body>
 </html>
