--- a/profile.html
+++ b/profile.html
@@ -14,12 +14,19 @@
             margin-left: auto;
             margin-right: auto;
             padding: 12px;
-            background:  linear-gradient(120deg,#39ef74,#4600f1 100%);
+            background: linear-gradient(120deg,#39ef74,#4600f1 100%);
+            animation: rotateCard 7s infinite;
+
+           
                 }
         img{
         width: 128px;
         height: 128px;
         border-radius: 50%;
+        }
+        @keyframes rotateCard{
+            50% {transform: rotate(360deg);}
+        }
     </style>
        
     }
