--- a/login.html
+++ b/login.html
@@ -31,7 +31,6 @@
         }
         input[type=submit]{
             width: auto;
-            display: inline;
             background-color: cornflowerblue;
             color: cornsilk;
             border: 1px solid #7a7373;
@@ -43,6 +42,25 @@
     </style>
 </head>
 <body>
+    <h3>Welcome, Please login with your details</h3>
+    <form action="" method="post">
+        <img src="./images/login.png" alt="Login" width="100px" height="100px">
+        <br>
+        <b>Username</b>
+        <br>
+        <input type="text" name="txtUsername" placeholder="john@example.com" required>
+        <br>  
+        <b>Password</b>
+        <br>
+        <input type="password" name="txtPassword" placeholder="minimum 6 characters" required>
+        <br>
+        <input type="checkbox" checked="checked" name="rememberMe">Remember Me
+        <br>
+        <a href="register.html">New User? Register Here</a>
+        <br><br> 
+        <input type="submit" value="Login"> 
+    </form>
+
     <div>
         <h3>Welcome, Please login with your details</h3>
         <form action="" method="post">
