change file name

--- a/login.html
+++ b/login.html
@@ -56,7 +56,7 @@
         <br>
         <input type="checkbox" checked="checked" name="rememberMe">Remember Me
         <br>
-        <a href="register.html">New User? Register Here</a>
+        <a href="Register.html">New User? Register Here</a>
         <br><br> 
         <input type="submit" value="Login"> 
     </form>
